fix pagination background color (it was invisible)

--- a/src/components/ProductPagination/ProductPagination.css
+++ b/src/components/ProductPagination/ProductPagination.css
@@ -1,7 +1,7 @@
 .page-link {
-    color: #F5F7FA !important;
     border-radius: 2px;
     border: none !important;
+    background-color: #F5F7FA !important;
 }
 
 .page-item {
@@ -9,11 +9,11 @@
 }
 
 .disabled > .page-link {
-    opacity: 0.2;
+    opacity: 0.5;
 }
 
 .active > .page-link {
-    font-weight: bold;    
+    color: #FFFFFF !important;
     background-color: #263F59 !important;
 }
 
